tests/NormalTests/paczka1/small_fuzzy/20940875.err
Error in line 2: dqs A239 78,6
Error in line 3: UXsc S765 42,5
